@@ -86,7 +86,7 @@ public class HystrixBuilderTest {
     final HystrixCommand<Integer> command = api.intCommand();
 
     assertThat(command).isNotNull();
-    assertThat(command.execute()).isEqualTo(new Integer(1));
+    assertThat(command.execute()).isEqualTo(Integer.valueOf(1));
   }
 
   @Test
@@ -98,7 +98,7 @@ public class HystrixBuilderTest {
     final HystrixCommand<Integer> command = api.intCommand();
 
     assertThat(command).isNotNull();
-    assertThat(command.execute()).isEqualTo(new Integer(0));
+    assertThat(command.execute()).isEqualTo(Integer.valueOf(0));
   }
 
   @Test
@@ -250,7 +250,7 @@ public class HystrixBuilderTest {
     final TestSubscriber<Integer> testSubscriber = new TestSubscriber<Integer>();
     observable.subscribe(testSubscriber);
     testSubscriber.awaitTerminalEvent();
-    Assertions.assertThat(testSubscriber.getOnNextEvents().get(0)).isEqualTo(new Integer(1));
+    Assertions.assertThat(testSubscriber.getOnNextEvents().get(0)).isEqualTo(Integer.valueOf(1));
   }
 
   @Test
@@ -267,7 +267,7 @@ public class HystrixBuilderTest {
     final TestSubscriber<Integer> testSubscriber = new TestSubscriber<Integer>();
     observable.subscribe(testSubscriber);
     testSubscriber.awaitTerminalEvent();
-    Assertions.assertThat(testSubscriber.getOnNextEvents().get(0)).isEqualTo(new Integer(0));
+    Assertions.assertThat(testSubscriber.getOnNextEvents().get(0)).isEqualTo(Integer.valueOf(0));
   }
 
   @Test
@@ -373,7 +373,7 @@ public class HystrixBuilderTest {
     final TestSubscriber<Integer> testSubscriber = new TestSubscriber<Integer>();
     single.subscribe(testSubscriber);
     testSubscriber.awaitTerminalEvent();
-    Assertions.assertThat(testSubscriber.getOnNextEvents().get(0)).isEqualTo(new Integer(1));
+    Assertions.assertThat(testSubscriber.getOnNextEvents().get(0)).isEqualTo(Integer.valueOf(1));
   }
 
   @Test
@@ -390,7 +390,7 @@ public class HystrixBuilderTest {
     final TestSubscriber<Integer> testSubscriber = new TestSubscriber<Integer>();
     single.subscribe(testSubscriber);
     testSubscriber.awaitTerminalEvent();
-    Assertions.assertThat(testSubscriber.getOnNextEvents().get(0)).isEqualTo(new Integer(0));
+    Assertions.assertThat(testSubscriber.getOnNextEvents().get(0)).isEqualTo(Integer.valueOf(0));
   }
 
   @Test
